<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout2"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvAlarmDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="18dp"
                android:text="@string/alarm_description"
                android:textAppearance="@style/smallText" />

            <EditText
                android:id="@+id/etAlarmDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/tvAlarmDescription"
                android:layout_below="@+id/tvAlarmDescription"
                android:layout_marginEnd="5dp"
                android:gravity="center_vertical"
                android:hint="@string/alarm_description"
                android:textAppearance="@style/largeText" />

            <TextView
                android:id="@+id/tvDatePick"
                style="@style/dateTimePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/etAlarmDescription"
                android:layout_below="@+id/etAlarmDescription"
                android:layout_marginTop="24dp"
                android:layout_toStartOf="@+id/tvTimePick"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                android:text="datepicker"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorBlack" />

            <TextView
                android:id="@+id/tvOptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/tvDatePick"
                android:layout_below="@+id/tvDatePick"
                android:layout_marginTop="18dp"
                android:text="@string/options"
                android:textAppearance="@style/smallText" />

            <TextView
                android:id="@+id/tvTimePick"
                style="@style/dateTimePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/tvDatePick"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/etAlarmDescription"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="24dp"
                android:drawablePadding="@dimen/activity_horizontal_margin"
                android:text="timepicker"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorBlack" />

            <RelativeLayout
                android:id="@+id/rlOptionTypeAndDifficult"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/rlOptionRepeat"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_margin="24dp"
                    android:contentDescription="@string/type_and_difficult"
                    android:src="@drawable/set_type_and_difficult" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:layout_toEndOf="@+id/imageView2"
                    android:background="@color/colorDivider" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/imageView2"
                    android:layout_alignParentEnd="true"
                    android:layout_toEndOf="@+id/imageView2"
                    android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
                    android:text="@string/type_and_difficult"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorBlack" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlOptionMelody"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/rlOptionTypeAndDifficult"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_margin="24dp"
                    android:contentDescription="@string/repeat"
                    android:src="@drawable/melody" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:layout_toEndOf="@+id/imageView3"
                    android:background="@color/colorDivider" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/imageView3"
                    android:layout_alignParentEnd="true"
                    android:layout_toEndOf="@+id/imageView3"
                    android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
                    android:text="@string/melody"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorBlack" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlOptionRepeat"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/tvOptions"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_margin="24dp"
                    android:contentDescription="@string/repeat"
                    android:src="@drawable/repeat" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:layout_toEndOf="@+id/imageView1"
                    android:background="@color/colorDivider" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/imageView1"
                    android:text="@string/repeat"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorBlack"
                    android:layout_toEndOf="@+id/imageView1" />

                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignTop="@+id/textView4"
                    android:layout_gravity="center_vertical" />

            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="bottom"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivider"
            android:orientation="horizontal" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="24dp"
            android:background="#00FFFFFF"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>


</RelativeLayout>